--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
 
     function enterInput() {
-      if (window.event.keyCode == 13) {
+      if (window.event.keyCode === 13) {
         newElement();
       }
     }
