--- a/src/index.html
+++ b/src/index.html
@@ -3,178 +3,200 @@
 <html>
 
 <head>
-
-  <title>
-    To-Do List page
-  </title>
-
-  <style>
-    /* CSS영역 추가 */
-  </style>
-
+    <title>To-Do list ver.2</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style type="text/css">
+    </style>
 </head>
 
 <body>
+    <header>
+        <div>
+            <h1>To do list ver.2</h1>
+        </div>
+        <input type="text" id="writeBox" placeholder="Write Here..." />
+        <input type="button" id="writeButton" value="update" />
+    </header>
 
-  <header>
+    <hr />
+
     <div>
-      <h1>To-Do List 3</h1>
+        <ul id="toDoList"></ul>
     </div>
-    <input onkeyup="enterInput();" type="text" id="write_box" placeholder="Write Here">
-    <input onclick="newElement();" type="button" id="write_button" value="Write">
-    <input onclick="clearElement();" type="button" id="clear_button" value="clear">
-  </header>
 
-  <hr />
+    <input type="button" id="selDelbutton" value="Sel Del" />
+    <input type="button" id="delAllbutton" value="Del all" />
 
-  <div>
-    <ul id="td_lists">
-    </ul>
-  </div>
-  <input onclick="del_check();" type="button" id="SelDedl_button" value="Del Select">
-  <hr />
+    <hr />
 
-  <footer><small>This page is builded by <a href="mailto:bekryoung@gmail.com">FlowerDog</a></small></footer>
+    <footer><small>This page is builded by <a href="mailto:bekryoung@gmail.com">FlowerDog</a></small></footer>
+
 
 </body>
 
+</html>
+
 <script>
-  var tdl = document.querySelector('#td_lists');
 
-  //체크박스
-  var c_box = document.createElement('input');
-  c_box.setAttribute('type', 'checkbox');
-  c_box.className = 'cd_box';
+    //HTML 변수선언
 
-  //수정버튼
-  var edit_btn = document.createElement('input');
-  edit_btn.setAttribute('type', 'button');
-  edit_btn.setAttribute('value', 'Edit');
-  edit_btn.className = 'Edit';
+    var toDoList = document.getElementById('toDoList');
+    var writeBox = document.getElementById('writeBox');
+    var writeButton = document.getElementById('writeButton');
+    var selDelbutton = document.getElementById('selDelbutton');
+    var delAllbutton = document.getElementById('delAllbutton');
 
-  //삭제버튼
-  var del_btn = document.createElement('input');
-  del_btn.setAttribute('type', 'button');
-  del_btn.setAttribute('value', '\u00D7');
-  del_btn.className = 'Delete'
+    var tdlArray = []; // 할일 오브젝트 배열
+    let idNumber = 0;
 
-  get_values();
+    //HTML 변수선언 끝!
 
-  function newElement() {
+    //기능 HTHL
 
-    var input_value = document.getElementById('write_box').value;
+    var checkBox = document.createElement('input');
+    checkBox.setAttribute('type', 'checkbox');
+    checkBox.className = 'checkBox';
 
-    if (!input_value) {
-      alert('You must write something!');
-    } else {
-      var li = document.createElement('li');
+    var editButton = document.createElement('input');
+    editButton.setAttribute('type', 'button');
+    editButton.setAttribute('value', 'Edit');
+    editButton.className = 'editButton';
 
-      //내용
-      var t = document.createTextNode(input_value);
+    var delbutton = document.createElement('input');
+    delbutton.setAttribute('type', 'button');
+    delbutton.setAttribute('value', '\u00D7');
+    delbutton.className = 'delButton';
 
-      li.insertBefore(c_box.cloneNode(), li.firstChild);//체크박스 추가
-      li.appendChild(t.cloneNode());//내용 추가
-      li.appendChild(edit_btn.cloneNode());//수정버튼 추가
-      li.appendChild(del_btn.cloneNode());//삭제버튼 추가
-      document.getElementById('write_box').value = '';//입력칸 초기화
-      tdl.appendChild(li);//li 추가
+    //기능 HTHL 끝!
 
-      store();
+    load_tdl_array();
 
-    }
-  }
-
-  function enterInput() {
-    if (window.event.keyCode === 13) {
-      newElement();
-    }
-  }
-
-  //버튼 이벤트리스너 추가
-  tdl.addEventListener('click', btn_del);
-
-  //버튼기능~~~~//
-  function btn_del(e) {
-    var div = e.target.parentElement;
-    switch (e.target.className) {
-
-      //삭제기능
-      case 'Delete':
-        div.parentElement.removeChild(div);
-        store();
-        break;
-
-      //수정기능
-      case 'Edit':
-        var edit_input = prompt('Write to edit');
-        var old_todo = div.childNodes[1];
-        if (edit_input === null) {
-        } else if (!edit_input) {
-          alert('You must write something!');
-        } else if (edit_input === old_todo.nodeValue) {
-          alert('You must write to different!');
-        } else {
-          var new_todo = document.createTextNode(edit_input);
-          div.replaceChild(new_todo, old_todo);
-          store();
+    //엔터키
+    writeBox.addEventListener('keydown', enter);
+    function enter() {
+        var keyInput = window.event.keyCode;
+        if (keyInput === 13) {
+            add_td();
         }
-        break;
-
-      //default
-      default:
-        break;
     }
-  }
-  //~~~~버튼기능//
 
-  //저장
-  function store() {
-    window.localStorage.setItem('tdlsave', tdl.innerHTML);
-  }
+    writeButton.addEventListener('click', add_td);
 
-  //불러오기
-  function get_values() {
-    var stored_values = window.localStorage.getItem('tdlsave');
-    if (!stored_values) {
-      tdl.innerHTML = '';
-    } else {
-      tdl.innerHTML = stored_values;
+    toDoList.addEventListener('click', button_td);
+
+    //할일추가 리스트 업
+    function add_td() {
+        if (!writeBox.value) {
+            alert('You have to write something.')
+        } else {
+            var newTD = {
+                doingID: 'doingID_' + idNumber,
+                doing: writeBox.value,
+                finish: false,
+                updateTime: new Date()
+            }
+            tdlArray.push(newTD);
+            var li = document.createElement('li');
+            li.setAttribute('id', newTD.doingID);
+            li.appendChild(checkBox.cloneNode());
+            li.appendChild(document.createTextNode(newTD.doing));
+            li.appendChild(editButton.cloneNode());
+            li.appendChild(delbutton.cloneNode());
+            toDoList.appendChild(li);
+
+            ++idNumber;
+            save_tdl_array();
+        }
+        writeBox.value = '';
     }
-    var tdl_list_up = tdl.getElementsByTagName('li')
-    Array.from(tdl_list_up).forEach(element => {
-      var tdl_txt = element.textContent;//텍스트저장
-      while (element.hasChildNodes()) {
-        element.removeChild(element.firstChild);
-      }
-      element.appendChild(c_box.cloneNode());//체크박스 추가
-      element.appendChild(document.createTextNode(tdl_txt));//텍스트 추가
-      element.appendChild(edit_btn.cloneNode());//수정버튼 추가
-      element.appendChild(del_btn.cloneNode());//삭제버튼 추가
-    })
 
-  }
+    //라인버튼 스크립트
+    function button_td(e) {
+        var targetTD = e.target.parentElement;
+        var targetTDObject = tdlArray.find(Element => {
+            return Element.doingID === targetTD.getAttribute('id');
+        });
 
-  //초기화
-  function clearElement() {
-    window.localStorage.clear();
-    get_values();
-  }
+        switch (e.target.className) {
+            case 'delButton':
+                tdlArray.splice(tdlArray.indexOf(targetTDObject), 1);
+                targetTD.parentElement.removeChild(targetTD);
+                save_tdl_array();
+                break;
 
-  //체크박스 삭제 기능
-  function del_check() {
-    var c_i;
-    var sel_c_box = document.querySelectorAll('.cd_box:checked');
-    if (!sel_c_box.length) {
-      alert('nothing checked.')
-    } else if (confirm('delete selected?') === true) {
-      Array.from(sel_c_box).forEach(element => {
-        var c_div = element.parentElement;
-        c_div.parentElement.removeChild(c_div);
-      })
+            case 'editButton':
+                var editInput = prompt('Write to edit', targetTDObject.doing);
+                if (editInput === null) {
+                } else if (!editInput) {
+                    alert('You have to write something.');
+                } else if (editInput === targetTDObject.doing) {
+                    alert('You have to write different.');
+                } else {
+                    targetTDObject.doing = editInput;
+                    targetTD.childNodes[1].nodeValue = editInput;
+                    save_tdl_array();
+                }
+                break;
+
+            default:
+                break;
+        }
     }
-    store();
-  }
+
+    //선택항목 삭제
+    selDelbutton.addEventListener('click', sel_del);
+    function sel_del() {
+        var selLi = document.querySelectorAll('.checkBox:checked');
+        if (selLi.length === 0) {
+            alert('You have to check to delete.')
+        } else {
+            selLi.forEach(Element => {
+                var selLiParent = Element.parentElement;
+                var selTDObject = tdlArray.find(Element2 => {
+                    return Element2.doingID === selLiParent.getAttribute('id');
+                });
+                tdlArray.splice(tdlArray.indexOf(selTDObject), 1);
+                selLiParent.parentElement.removeChild(selLiParent);
+            })
+            save_tdl_array();
+        }
+    }
+
+    //할일리스트 저장하기
+    function save_tdl_array() {
+        window.localStorage.setItem('tdlArray', JSON.stringify(tdlArray));
+        window.localStorage.setItem('idNumber', JSON.stringify(idNumber));
+    }
+
+    //할일리스트 가져오기
+    function load_tdl_array() {
+        var lodedTdl = JSON.parse(window.localStorage.getItem('tdlArray'));
+        var lodedIDNumber = JSON.parse(window.localStorage.getItem('idNumber'));
+        if (typeof lodedIDNumber === 'number') {
+            idNumber = lodedIDNumber;
+        }
+        if (Array.isArray(lodedTdl)) {
+            tdlArray = lodedTdl;
+            tdlArray.forEach(Element => {
+                var li = document.createElement('li');
+                li.setAttribute('id', Element.doingID);
+                li.appendChild(checkBox.cloneNode());
+                li.appendChild(document.createTextNode(Element.doing));
+                li.appendChild(editButton.cloneNode());
+                li.appendChild(delbutton.cloneNode());
+                toDoList.appendChild(li);
+            })
+        } else if (!lodedTdl) {
+            tdlArray = [];
+        }
+    }
+
+    //초기화
+    delAllbutton.addEventListener('click', clear_tdl_array)
+    function clear_tdl_array() {
+        window.localStorage.clear('tdlArray');
+        window.localStorage.clear('idNumber');
+        location.reload();
+    }
 
 </script>
-
-</html>
