--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,33 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style type="text/css">
+        .commonDiv {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        .lists {
+            margin: 10px;
+        }
     </style>
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="commonDiv">
             <h1>To do list ver.2</h1>
         </div>
-        <input type="text" id="writeBox" placeholder="Write Here..." />
-        <input type="button" id="writeButton" value="update" />
+        <div class="commonDiv">
+            <input type="text" id="writeBox" placeholder="Write Here..." />
+            <input type="button" id="writeButton" value="update" class="btn btn-outline-primary btn-sm" />
+        </div>
     </header>
 
     <hr />
 
-    <div>
-        <ul id="toDoList" class="list-group"></ul>
+    <div class="commonDiv">
+        <h3>To do list</h3>
+        <ul id="toDoList" class="list-group lists"></ul>
     </div>
 
     <footer>
@@ -44,11 +55,11 @@
 
     //HTML 변수선언
 
-    var toDoList = document.getElementById('toDoList');
-    var writeBox = document.getElementById('writeBox');
-    var writeButton = document.getElementById('writeButton');
-    var selDelbutton = document.getElementById('selDelbutton');
-    var delAllbutton = document.getElementById('delAllbutton');
+    const toDoList = document.getElementById('toDoList');
+    const writeBox = document.getElementById('writeBox');
+    const writeButton = document.getElementById('writeButton');
+    const selDelbutton = document.getElementById('selDelbutton');
+    const delAllbutton = document.getElementById('delAllbutton');
 
     var tdlArray = []; // 할일 오브젝트 배열
     let idNumber = 0;
@@ -61,8 +72,9 @@
         var li = document.createElement('li');
         li.setAttribute('id', targetElement.doingID);
         li.setAttribute('class', 'list-group-item');
+        li.setAttribute('draggable', 'true');
         li.innerHTML = `<input type="checkBox" class="checkBox" />
-        ${targetElement.doing}
+        <span class="doingText">${targetElement.doing}</span>
         <button class="editButton btn btn-info btn-sm">Edit</button>
         <button class="delButton btn btn-danger btn-sm">\u00D7</button>`;
         toDoList.appendChild(li);
@@ -81,8 +93,10 @@
         }
     }
 
+    //할일추가 이벤트 리스너
     writeButton.addEventListener('click', add_td);
 
+    //라인버튼 이벤트 리스너
     toDoList.addEventListener('click', button_td);
 
     //할일추가 리스트 업
@@ -126,7 +140,7 @@
                 alert('You have to write different.');
             } else {
                 targetTDObject.doing = editInput;
-                targetTD.childNodes[1].nodeValue = editInput;
+                targetTD.querySelector('.doingText').innerText = editInput;
                 save_tdl_array();
             }
         }
